# gentoo-build-publisher

./: .csslintrc  .eslintrc.json  .gitignore  .typos.toml  LICENSE  Makefile  README.md  noxfile.py  package-lock.json  package.json  pyproject.toml  runtests.py  setup.cfg
.github/workflows/: build-distribution.yml
contrib/deployment/: celery.py  gentoo-build-publisher-worker.service  gentoo-build-publisher-wsgi.service  gentoo-build-publisher.conf  nginx.conf
contrib/deployment/project_template/project_name/: settings.py-tpl
contrib/machines/: Jenkinsfile  Makefile  Makefile.container  README.md  gbp-meta.py
contrib/machines/gbp/: repos
contrib/machines/gbp/configs/etc-portage/: make.conf
contrib/machines/gbp/configs/etc-portage/package.use/: 00base.use
contrib/machines/gbp/configs/etc-portage/profile/: packages
contrib/machines/gbp/configs/etc-portage/repos.conf/: gentoo.conf  marduk.conf
contrib/machines/gbp/configs/usr-local-portage/: make.conf
contrib/machines/gbp/configs/var-lib-portage/: world
contrib/machines/machines/: Jenkinsfile  Makefile  stage4.excl
contrib/machines/machines/gbp/configs/etc-portage/: make.profile
contrib/machines/machines/gbp/configs/etc-portage/package.use/: 00base.use
contrib/machines/machines/gbp/configs/var-lib-portage/: world
docs/: artifact-spec.md  how-to-install.md
src/gbp_testkit/: __init__.py  factories.py  fixtures.py  helpers.py  settings.py
src/gbp_testkit/data/: jenkins_build.json
src/gentoo_build_publisher/: __init__.py  _django_setup.py  addmachine.py  addrepo.py  admin.py  apps.py  build.py  build_publisher.py  cache.py  check.py  checks.py  common.py  conf.py  create_machine_job.xml  db.py  diff.py  fs.py  graphql.py  io.py  jenkins.py  jobs.py  machines.py  managers.py  memorydb.py  models.py  plugins.py  publisher.py  purge.py  records.py  schema.graphql  settings.py  signals.py  stats.py  storage.py  string.py  tasks.py  types.py  urls.py  utils.py  views.py
src/gentoo_build_publisher/cli/: __init__.py  addmachine.py  addrepo.py  apikey.py  check.py  delete.py  dump.py  restore.py  stats.py  utils.py  worker.py
src/gentoo_build_publisher/contrib/deployment/: gentoo-build-publisher-pre.service  gentoo-build-publisher-worker.service  gentoo-build-publisher-wsgi.service  gentoo-build-publisher.conf  nginx.conf  rsyncd.conf
src/gentoo_build_publisher/contrib/deployment/project_template/project_name/: settings.py-tpl
src/gentoo_build_publisher/django/gentoo_build_publisher/: __init__.py  apps.py  models.py  signals.py  urls.py
src/gentoo_build_publisher/django/gentoo_build_publisher/migrations/: 0001_initial.py  0003_remove_buildmodel_unique_build_and_more.py  0004_apikey.py
src/gentoo_build_publisher/django/gentoo_build_publisher/static/gbp/: dashboard.js  gbp.css  machine.js
src/gentoo_build_publisher/django/gentoo_build_publisher/templates/: 404.html  500.html
src/gentoo_build_publisher/django/gentoo_build_publisher/templatetags/: __init__.py  gbp.py
src/gentoo_build_publisher/django/gentoo_build_publisher/views/: __init__.py  context.py  utils.py
src/gentoo_build_publisher/graphql/: __init__.py  build.py  machine_summary.py  mutations.py  queries.py  scalars.py  schema.graphql  stats.py  utils.py
src/gentoo_build_publisher/jenkins/: __init__.py  create_machine_job.xml  create_repo_job.xml  folder.xml  xml.py
src/gentoo_build_publisher/jobs/: __init__.py  celery.py  common.py  rq.py  sync.py
src/gentoo_build_publisher/management/commands/: gbpchk.py
src/gentoo_build_publisher/migrations/: 0001_initial.py  0002_add_purge_field_to_buildmodel.py  0002_alter_buildmodel_number.py  0003_auto_20210506_1520.py  0003_remove_buildmodel_unique_build_and_more.py  0004_apikey.py  0004_keptbuild.py  0005_copy_keep.py  0006_remove_buildmodel_keep.py  0007_addnotes.py  0008_buildlog.py  0009_remove_buildmodel_task_id.py  0010_build_model_add_built.py  0011_rename_name_field_to_machine.py
src/gentoo_build_publisher/queries/: create_machine.graphql  create_repo.graphql
src/gentoo_build_publisher/records/: __init__.py  django_orm.py  memory.py
src/gentoo_build_publisher/static/gbp/: dashboard.js  gbp.css  gbp.js  machine.js
src/gentoo_build_publisher/templates/gentoo_build_publisher/: base.html  binrepos.conf  build_row.html  dashboard.html  index.html  repos.conf  row1.html  row2.html  row4.html
src/gentoo_build_publisher/templates/gentoo_build_publisher/about/: row3.html
src/gentoo_build_publisher/templates/gentoo_build_publisher/dashboard/: main.html  row2.html  row3.html
src/gentoo_build_publisher/templates/gentoo_build_publisher/machine/: build_row.html  buildcard.html  builds.html  main.html  package_row.html  packages.html  row2.html
src/gentoo_build_publisher/templates/gentoo_build_publisher/plugins/: main.html  row1.html  row2.html
src/gentoo_build_publisher/templatetags/: gbp.py
src/gentoo_build_publisher/utils/: __init__.py  dashboard.py  fs.py  string.py  time.py  views.py
src/gentoo_build_publisher/utils/archive/: __init__.py  metadata.py  records.py  storage.py
src/gentoo_build_publisher/views/: __init__.py  context.py  utils.py
src/gentoo_build_publisher/worker/: __init__.py  celery.py  rq.py  sync.py  tasks.py  thread.py
stubs/pydispatch/: __init__.pyi  dispatch.pyi
tests/: __init__.py  __main__.py  data.py  factories.py  fixture.py  fixture_types.py  fixtures.py  helpers.py  lib.py  mock_graphql_module.py  runtests.py  settings.py  setup.py  setup_types.py  test_addmachine.py  test_addrepo.py  test_admin.py  test_build.py  test_cache.py  test_check.py  test_checks.py  test_cli.py  test_cli_addmachine.py  test_cli_addrepo.py  test_cli_apikey.py  test_cli_check.py  test_cli_delete.py  test_cli_dump.py  test_cli_restore.py  test_cli_stats.py  test_cli_worker.py  test_common.py  test_dashboard_utils.py  test_db.py  test_diff.py  test_fs.py  test_gbpchk.py  test_graphql.py  test_graphql_utils.py  test_jenkins.py  (+38 more)
tests/data/: jenkins_build.json  job_parameters.json  logs.txt
tests/records/: test_django_orm.py  test_memory.py  test_records.py
(+24 files in other folders)
