[project]
name = "gentoo-build-publisher"
dynamic = ["version"]
description = "Gentoo Build Publisher"
readme = "README.md"
authors = [{name = "Albert Hopkins", email = "marduk@letterboxes.org"}]
license = {text = "GPL3+"}
dependencies = [
    "ariadne>=0.14.0",
    "ariadne_django",
    "celery[msgpack]",
    "dataclasses-json",
    "django",
    "pydantic",
    "python-dateutil",
    "python-dispatch>=0.2.0",
    "requests",
    "simplejson",
    "yarl",
    "gbpcli>=1.3.0",
]
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Software Distribution",
    "Topic :: System :: Systems Administration",
]

[project.urls]
homepage = "https://github.com/enku/gentoo-build-publisher"
repository = "https://github.com/enku/gentoo-build-publisher"

[project.entry-points."gentoo_build_publisher.records"]
django = "gentoo_build_publisher.models:DjangoDB"

[project.optional-dependencies]

[project.entry-points."gbpcli.subcommands"]
addmachine = "gentoo_build_publisher.addmachine"
addrepo = "gentoo_build_publisher.addrepo"
check = "gentoo_build_publisher.check"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.coverage.run]
source = ["gentoo_build_publisher"]
omit = ["src/gentoo_build_publisher/migrations/*"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.master]
load-plugins = "pylint_django"
django-settings-module = "settings"
init-hook = "import sys; sys.path.insert(0, 'tests')"
ignore = ["/migrations/"]

[tool.flake8]
max-line-length = 88

[tool.mypy]
plugins =["mypy_django_plugin.main"]
exclude = ["/migrations/"]
files = ["src/gentoo_build_publisher"]
mypy_path = ["tests", "stubs"]
strict = true

[[tool.mypy.overrides]]
module = "gentoo_build_publisher.admin"
ignore_errors = true

[[tool.mypy.overrides]]
module = "ariadne_django.*"
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "settings"

[tool.pdm]
version = { source = "scm" }

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.6.0",
    "coverage[toml]>=6.4.2",
    "factory-boy>=3.2.1",
    "mypy>=0.971",

    # pylint-django fails with 2.15.0. See bug #370
    # https://github.com/PyCQA/pylint-django/issues/370
    "pylint>=2.14.5,!=2.15.0",

    "pylint-django>=2.5.3",
    "django-stubs>=1.12.0",
    "celery-stubs>=0.1.2",
    "types-requests>=2.28.7",
]
