[project]
name = "gentoo-build-publisher"
dynamic = ["version"]
description = "Gentoo Build Publisher"
readme = "README.md"
authors = [{name = "Albert Hopkins", email = "marduk@letterboxes.org"}]
license = {text = "GPL3+"}
dependencies = [
    "ariadne>=0.14.0",
    "ariadne_django",
    "celery[msgpack]",
    "django",
    "python-dispatch>=0.2.1",
    "requests",
    "yarl!=1.9.1",
    "gbpcli>=2.3.0",
    "orjson>=3.9.1",
    "cryptography>=42.0.4",
    "rich>=13.7.0",
]
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Software Distribution",
    "Topic :: System :: Systems Administration",
]

[project.urls]
homepage = "https://github.com/enku/gentoo-build-publisher"
repository = "https://github.com/enku/gentoo-build-publisher"

[project.entry-points."gentoo_build_publisher.records"]
django = "gentoo_build_publisher.records.django_orm"
memory = "gentoo_build_publisher.records.memory"

[project.entry-points."gbpcli.subcommands"]
addmachine = "gentoo_build_publisher.cli.addmachine"
addrepo = "gentoo_build_publisher.cli.addrepo"
apikey = "gentoo_build_publisher.cli.apikey"
check = "gentoo_build_publisher.cli.check"
delete = "gentoo_build_publisher.cli.delete"
worker = "gentoo_build_publisher.cli.worker"

[project.entry-points."gentoo_build_publisher.graphql_schema"]
gbp = "gentoo_build_publisher.graphql"

[project.entry-points."gentoo_build_publisher.worker_interface"]
celery = "gentoo_build_publisher.worker.celery:CeleryWorker"
rq = "gentoo_build_publisher.worker.rq:RQWorker"
sync = "gentoo_build_publisher.worker.sync:SyncWorker"
thread = "gentoo_build_publisher.worker.thread:ThreadWorker"

[project.optional-dependencies]
redis = [
    "rq>=1.15.1",
]
test = [
    "nox>=2024.4.15",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.coverage.run]
branch = true
source = ["gentoo_build_publisher"]
omit = ["src/gentoo_build_publisher/migrations/*"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.master]
load-plugins = "pylint_django,pylint.extensions.bad_builtin"
django-settings-module = "settings"
init-hook = "import sys; sys.path.insert(0, 'tests')"
bad-functions = "print"
ignore = ["/migrations/"]

[tool.flake8]
max-line-length = 88

[tool.black]
skip-magic-trailing-comma = true

[tool.mypy]
plugins =["mypy_django_plugin.main"]
exclude = ["/migrations/"]
files = ["src/gentoo_build_publisher"]
mypy_path = ["tests", "stubs"]
strict = true

[[tool.mypy.overrides]]
module = "gentoo_build_publisher.admin"
ignore_errors = true

[[tool.mypy.overrides]]
module = "ariadne_django.*"
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "settings"

[tool.pdm]
version = { source = "scm" }

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.6.0",
    "coverage[toml]>=6.4.2",
    "factory-boy>=3.2.1",
    "mypy==1.7.1",
    # pylint-django fails with 2.15.0. See bug #370
    # https://github.com/PyCQA/pylint-django/issues/370
    "pylint>=2.14.5,!=2.15.0",
    "pylint-django>=2.5.3",
    "django-stubs>=1.12.0",
    "types-requests>=2.28.7",
    "tblib>=1.7.0",
    "celery-types>=0.19.0",
    "typos>=1.16.23",
    "fakeredis>=2.20.0",
    "unittest-fixtures @ git+https://github.com/enku/unittest-fixtures.git",
]

[tool.unittest-fixtures]
fixtures-module = "tests.fixtures"
