[metadata]
name = gentoo-build-publisher
description = Gentoo Build Publisher
author = Albert Hopkins
author_email = marduk@letterboxes.org

[options]
include_package_data = True
zip_safe = True
packages = find:
package_dir =
    =src

python_requires = >=3.10
install_requires =
    ariadne>=0.14.0
    ariadne_django
    celery[msgpack]
    dataclasses-json
    django
    pydantic
    python-dateutil
    requests
    simplejson
    yarl

[options.packages.find]
where = src

[options.package_data]
gentoo_build_publisher = *.css, *.graphql, *.html, *.js

[mypy]
plugins =
    mypy_django_plugin.main
exclude = /migrations/
files = src/gentoo_build_publisher
mypy_path = tests

[mypy-gentoo_build_publisher.admin]
ignore_errors = True

[mypy.plugins.django-stubs]
django_settings_module = "settings"

[flake8]
max-line-length = 88

[pylint.master]
load-plugins = pylint_django
django-settings-module = settings
init-hook = import sys; sys.path.insert(0, "tests")
