[metadata]
name = gentoo-build-publisher
description = Gentoo Build Publisher
author = Albert Hopkins
author_email = marduk@letterboxes.org

[options]
include_package_data = True
zip_safe = True
packages = find:
package_dir =
    =src

python_requires = >=3.10
install_requires =
    ariadne>=0.14.0
    ariadne_django
    celery[msgpack]
    dataclasses-json
    django
    pydantic
    python-dateutil
    python-dispatch>=0.2.0
    requests
    simplejson
    yarl

[options.packages.find]
where = src

[options.package_data]
gentoo_build_publisher = *.css, *.graphql, *.html, *.js

[mypy]
plugins =
    mypy_django_plugin.main
exclude = /migrations/
files = src/gentoo_build_publisher
mypy_path = tests
strict = true

[mypy-gentoo_build_publisher.admin]
ignore_errors = True

[mypy-ariadne_django.*]
ignore_missing_imports=True

[mypy.plugins.django-stubs]
django_settings_module = "settings"

[flake8]
max-line-length = 88
